--- a/packages/SystemUI/res/layout-sw600dp/status_bar_notification_panel.xml
+++ b/packages/SystemUI/res/layout-sw600dp/status_bar_notification_panel.xml
@@ -63,6 +63,13 @@
             android:layout_alignParentTop="true"
             android:layout_marginTop="178dp"
             >
+
+            <com.android.systemui.statusbar.powerwidget.PowerWidget android:id="@+id/exp_power_stat"
+                android:layout_width="match_parent"
+                android:layout_height="64dp"
+                />
+            <View style="@style/StatusBarPanelSettingsPanelSeparator" />
+
             <ScrollView
                 android:id="@+id/notification_scroller"
                 android:layout_height="wrap_content"
