Update hide statusbar and home global action drawables
Change-Id: Id0b26dc4962036aa75bc94bdf56024780c26c4ee

--- a/core/res/res/layout/global_actions_condensed_mode_row_two.xml
+++ b/core/res/res/layout/global_actions_condensed_mode_row_two.xml
@@ -64,7 +64,7 @@
             android:layout_marginRight="8dp"
             android:layout_marginTop="6dp"
             android:layout_marginBottom="6dp"
-            android:src="@drawable/ic_menu_copy"
+            android:src="@drawable/ic_lock_hide_statusbar"
             android:scaleType="center"
             android:duplicateParentState="true"
             android:background="@drawable/silent_mode_indicator"
@@ -92,7 +92,7 @@
             android:layout_marginRight="8dp"
             android:layout_marginTop="6dp"
             android:layout_marginBottom="6dp"
-            android:src="@drawable/ic_menu_home"
+            android:src="@drawable/ic_lock_home"
             android:scaleType="center"
             android:duplicateParentState="true"
             android:background="@drawable/silent_mode_indicator"
