--- a/core/res/res/layout-sw600dp/keyguard_screen_status_land.xml
+++ b/core/res/res/layout-sw600dp/keyguard_screen_status_land.xml
@@ -39,48 +39,31 @@
         />
 
     <!-- CyanogenMod Weather Panel -->
-    <RelativeLayout
+    <LinearLayout
         android:id="@+id/weather_panel"
         android:layout_height="wrap_content"
         android:layout_width="fill_parent"
         android:gravity="right"
         android:orientation="horizontal" >
 
-        <ImageView
-            android:id="@+id/weather_image"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            android:paddingTop="8dip"
-            android:paddingLeft="8dip"
-            android:paddingRight="8dip"
-            android:src="@android:drawable/ic_dialog_alert" />
-
-        <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_toLeftOf="@id/weather_image"
-            android:orientation="horizontal">
+            android:gravity="right"
+            android:orientation="vertical" >
 
             <TextView
                 android:id="@+id/weather_city"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="right"
                 android:textSize="16sp"
                 android:textStyle="bold"
-                android:layout_alignParentRight="true"
                 android:textColor="?android:attr/textColorPrimary"/>
 
             <TextView
                 android:id="@+id/weather_condition"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/weather_city"
-                android:layout_alignParentRight="true"
-                android:gravity="right"
                 android:textSize="14sp"
                 android:textColor="?android:attr/textColorPrimary" />
 
@@ -88,32 +71,35 @@
                 android:id="@+id/update_time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/weather_condition"
-                android:layout_alignParentRight="true"
-                android:gravity="right"
                 android:textSize="8sp"
                 android:textColor="?android:attr/textColorSecondary" />
 
-        </RelativeLayout>
+        </LinearLayout>
 
-        <RelativeLayout
+        <ImageView
+            android:id="@+id/weather_image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/weather_image"
-            android:orientation="horizontal"
-            android:layout_centerVertical="true" >
+            android:layout_centerVertical="true"
+            android:paddingLeft="8dip"
+            android:paddingRight="8dip"
+            android:src="@android:drawable/ic_dialog_alert" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
 
             <TextView
                 android:id="@+id/weather_temp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
-                android:textSize="24sp"
+                android:textSize="26sp"
                 android:textColor="?android:attr/textColorPrimary" />
 
             <View
                 android:id="@+id/weather_divider"
-                android:layout_below="@id/weather_temp"
                 android:layout_width="44dip"
                 android:layout_height="1dip"
                 android:layout_centerHorizontal="true"
@@ -123,15 +109,14 @@
                 android:id="@+id/weather_low_high"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/weather_divider"
                 android:layout_centerHorizontal="true"
                 android:paddingTop="2dip"
                 android:textSize="14sp"
                 android:textColor="?android:attr/textColorPrimary" />
 
-        </RelativeLayout>
+        </LinearLayout>
 
-    </RelativeLayout>
+    </LinearLayout>
 
     <com.android.internal.widget.DigitalClock android:id="@+id/time"
         android:layout_width="wrap_content"
