Framework: Lock screen Calendar (Part 2 of 2)
This commit adds the framework side support for displaying the
next Calendar event on the lock screen.

Note: Calendar will not display on a Phone in landscape mode, there
is just not enough space for it.

Patch set 2  - Different attempt at layout for phone + NPE checking
Patch set 3  - NPE fix and centered layout (tablets)
Patch set 4  - New layouts and cleanup
Patch set 5  - Tablet portrait layout tweak
Patch set 6  - Whitespace cleanup

Change-Id: Ib3dd33d7224cff8345ec3868b9097584697601c5

Conflicts:

	policy/src/com/android/internal/policy/impl/KeyguardStatusViewManager.java

--- a/core/res/res/layout-sw600dp/keyguard_screen_status_port.xml
+++ b/core/res/res/layout-sw600dp/keyguard_screen_status_port.xml
@@ -2,6 +2,7 @@
 <!--
 **
 ** Copyright 2010, The Android Open Source Project
+** Copyright 2012, The CyanogenMod Project (Weather, Calendar)
 **
 ** Licensed under the Apache License, Version 2.0 (the "License")
 ** you may not use this file except in compliance with the License.
@@ -194,11 +195,46 @@
         android:lineSpacingExtra="8dip"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dip"
+        android:layout_marginTop="10dip"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textSize="16sp"
         android:singleLine="false"
         android:visibility="invisible"
         android:textColor="@color/lockscreen_owner_info"
         />
+
+    <!-- CyanogenMod Calendar Panel -->
+    <LinearLayout
+        android:id="@+id/calendar_panel"
+        android:orientation="vertical"
+        android:layout_width="wrap_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dip" >
+
+        <TextView
+            android:id="@+id/calendar_event_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:singleLine="true"
+            android:textSize="16sp"
+            android:textColor="?android:attr/textColorPrimary"
+            android:ellipsize="marquee"
+            android:fadingEdge="horizontal" />
+
+        <TextView
+            android:id="@+id/calendar_event_details"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="12sp"
+            android:singleLine="true"
+            android:ellipsize="marquee"
+            android:marqueeRepeatLimit="marquee_forever"
+            android:scrollHorizontally="true"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
+            android:fadingEdge="horizontal"
+            android:textColor="?android:attr/textColorSecondary" />
+
+    </LinearLayout>
+
 </LinearLayout>
